--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1244,3 +1244,6 @@ version 7.0 (2020-02-16)
 version 7.0.1 (2020-02-21)
     * Fixes LogoutRequest.toURI for logout endpoints containing query
       parameters in the URI (iss 286).
+
+version 7.0.2 (2020-02-21)
+    * ClaimsRequest.parse(JSONObject) must not modify the source object (iss #287).
