--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1264,3 +1264,6 @@ version 7.1.1 (2020-02-25)
     * Restores com.sun.mail:javax.mail:1.6.1 as non-optional dependency to
       prevent class loading issues with JSONObjectUtils, HTTPMessage and other
       classes (iss #291).
+
+version 7.2 (2020-03-09)
+    * New DateWithTimeZoneOffset constructor for UTC.
