--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1265,7 +1265,10 @@ version 7.1.1 (2020-02-25)
       prevent class loading issues with JSONObjectUtils, HTTPMessage and other
       classes (iss #291).
 
-version 7.2 (2020-03-09)
+version 7.2 (2020-03-10)
+    * Updates UserInfo for JSON array of "verified_claims" (breaking change).
+    * Updates the classes in the eKYC / Identity Assurance package to the JSON
+      schema in the latest draft 09 (breaking change).
     * Adds new VerificationProcess class for type-safe representation of
       "verification_process" in OpenID Connect for Identity Assurance 1.0,
       updates the IdentityVerification class accordingly (breaking change).
