--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1267,6 +1267,7 @@ version 7.1.1 (2020-02-25)
 
 version 7.2 (2020-03-10)
     * Updates UserInfo for JSON array of "verified_claims" (breaking change).
+    * Adds PersonClaims support for "place_of_birth".
     * Updates the classes in the eKYC / Identity Assurance package to the JSON
       schema in the latest draft 09 (breaking change).
     * Adds new VerificationProcess class for type-safe representation of
