--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1296,3 +1296,4 @@ version 7.4 (2020-04-20)
     * Updates JAR support in AuthorizationRequest and AuthenticationRequest to
       draft-ietf-oauth-jwsreq-21.
     * Bumps to com.nimbusds:nimbus-jose-jwt:8.14.1
+    * Restored dep range net.minidev:json-smart:[1.3.1,2.3]
