--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1295,5 +1295,6 @@ version 7.3 (2020-03-23)
 version 7.4 (2020-04-20)
     * Updates JAR support in AuthorizationRequest and AuthenticationRequest to
       draft-ietf-oauth-jwsreq-21.
-    * Bumps to com.nimbusds:nimbus-jose-jwt:8.14.1
     * Restored dep range net.minidev:json-smart:[1.3.1,2.3]
+    * Bumps to com.nimbusds:nimbus-jose-jwt:8.14.1
+    * Bumps optional OpenSAML dep to 3.4.5
