--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1304,4 +1304,5 @@ version 8.0 (2020-04-29)
     * Adds JSONObjectUtils.parseKeepingOrder and
       JSONUtils.parseJSONKeepingOrder methods.
     * Adds new ErrorObject.toHTTPResponse helper method.
+    * Removes javax.mail dependency and all deprecated API calls relying on it.
     * Updates optional BouncyCastle dependency to 1.65.
