--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1311,3 +1311,6 @@ version 8.0 (2020-04-30)
 
 version 8.1 (2020-04-30)
     * Adds new TrustChainResolver(EntityID) constructor.
+
+version 8.2 (2020-05-01)
+    * Adds new MetadataPolicyEntry.getOperationsMap method.
