--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1315,3 +1315,4 @@ version 8.1 (2020-04-30)
 version 8.2 (2020-05-01)
     * Adds new static MetadataPolicy.combine method.
     * Adds new MetadataPolicyEntry.getOperationsMap and combine methods.
+    * Adds new TrustChain.resolveCombinedMetadataPolicy method.
