--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1313,6 +1313,7 @@ version 8.1 (2020-04-30)
     * Adds new TrustChainResolver(EntityID) constructor.
 
 version 8.2 (2020-05-01)
+    * Adds new MetadataPolicy.apply method.
     * Adds new static MetadataPolicy.combine method.
     * Adds new MetadataPolicyEntry.getOperationsMap and combine methods.
     * Adds new TrustChain.resolveCombinedMetadataPolicy method.
