--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1325,3 +1325,5 @@ version 8.3 (2020-05-10)
 version 8.4 (2020-05-20)
     * Adds proxy support to HTTPRequest.
 
+version 8.4.1 (2020-05-27)
+    * Fixes AuthorizationResponse.toURI when empty parameters (iss #297).
