--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1327,3 +1327,7 @@ version 8.4 (2020-05-20)
 
 version 8.4.1 (2020-05-27)
     * Fixes AuthorizationResponse.toURI when empty parameters (iss #297).
+
+version 8.4.2 (2020-05-27)
+    * Fixes AuthorizationResponse.toURI when redirect_uri ends with '?' (iss
+      #297).
