--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1331,3 +1331,4 @@ version 8.4.1 (2020-05-27)
 version 8.4.2 (2020-05-27)
     * Fixes AuthorizationResponse.toURI when redirect_uri ends with '?' (iss
       #297).
+    * Updates server certificate for TLSUtilsTest.
