--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1332,3 +1332,8 @@ version 8.4.2 (2020-05-27)
     * Fixes AuthorizationResponse.toURI when redirect_uri ends with '?' (iss
       #297).
     * Updates server certificate for TLSUtilsTest.
+
+version 8.4.3 (2020-05-31)
+    * Fixes HTTP status code parsing in
+      UserInfoErrorResponse.parse(HTTPResponse) when a bearer token error is
+      present in the WWW-Authenticate header (iss #299).
