--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1349,5 +1349,7 @@ version 8.6 (2020-06-05)
     * Adds OpenID Connect Federation 1.0 trust mark support.
 
 version 8.7 (2020-06-05)
-    * Adds generic EntityStatementClaimsSet setMetadata and setMetadata
+    * Adds generic EntityStatementClaimsSet getMetadata and setMetadata
       methods.
+    * Adds typed EntityStatementClaimsSet getMetadataPolicy and
+      setMetadataPolicy methods.
