--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1368,3 +1368,9 @@ version 8.9 (2020-06-10)
 version 8.10 (2020-06-10)
     * Makes EntityStatementRetriever and DefaultEntityStatementRetriever
       public.
+
+version 8.11 (2020-06-10)
+    * Adds WellKnownPathComposeStrategy enum and updates the
+      AuthorizationServerConfigurationRequest,
+      OIDCProviderConfigurationRequest and FederationEntityConfigurationRequest
+      to support infix and postfix well-known path composition strategies.
