--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1369,8 +1369,9 @@ version 8.10 (2020-06-10)
     * Makes EntityStatementRetriever and DefaultEntityStatementRetriever
       public.
 
-version 8.11 (2020-06-10)
+version 8.11 (2020-06-25)
     * Adds WellKnownPathComposeStrategy enum and updates the
       AuthorizationServerConfigurationRequest,
       OIDCProviderConfigurationRequest and FederationEntityConfigurationRequest
       to support infix and postfix well-known path composition strategies.
+    * Makes DefaultEntityStatementRetriever package private methods public.
