--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1378,3 +1378,4 @@ version 8.11 (2020-06-26)
       to support the postfix and infix well-known path composition strategies.
     * Makes DefaultEntityStatementRetriever package private methods public.
     * Adds HTTPResponse.SC_NOT_FOUND 404 constant.
+    * CoderVerifier and Secret implement Serializable (iss #303).
