--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1369,7 +1369,7 @@ version 8.10 (2020-06-10)
     * Makes EntityStatementRetriever and DefaultEntityStatementRetriever
       public.
 
-version 8.11 (2020-06-26)
+version 8.11 (2020-06-27)
     * Adds WellKnownPathComposeStrategy enum and updates the
       AuthorizationServerConfigurationRequest,
       OIDCProviderConfigurationRequest and FederationEntityConfigurationRequest
@@ -1378,4 +1378,4 @@ version 8.11 (2020-06-26)
       to support the postfix and infix well-known path composition strategies.
     * Makes DefaultEntityStatementRetriever package private methods public.
     * Adds HTTPResponse.SC_NOT_FOUND 404 constant.
-    * CoderVerifier and Secret implement Serializable (iss #303).
+    * CodeVerifier and Secret implement Serializable (iss #303).
