--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1382,3 +1382,5 @@ version 8.11 (2020-06-28)
     * Renames FederationType to ClientRegistrationType.
     * Updates OIDCProvider metadata for client_registration_types_supported,
       deprecates federation_types_supported.
+    * Adds ClientAuthenticationMethod.REQUEST_OBJECT (request_object) for
+      OpenID Connect Federation 1.0.
