--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1393,3 +1393,7 @@ version 8.12 (2020-06-29)
 version 8.12.1 (2020-06-29)
     * Fixes NPE in FederationEntityConfigurationSuccessResponse.parse with
       empty entity body.
+
+version 8.13 (2020-07-01)
+    * Federation EntityStatementClaimsSet no longer requires jwks for OP
+      statements about an RP in explicit client registration.
