Updates Federation for draft 12, removes old draft 11 fields

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1397,3 +1397,6 @@ version 8.12.1 (2020-06-29)
 version 8.13 (2020-07-01)
     * Federation EntityStatementClaimsSet no longer requires jwks for OP
       statements about an RP in explicit client registration.
+    * Updates OIDCProviderMetadata for
+      client_registration_authn_methods_supported.
+    * Removes old OpenID Connect Federation 1.0 draft 11 fields.
