--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1409,6 +1409,8 @@ version 8.14 (2020-07-07)
       not attempt INFIX strategy when the entity ID has not path in its URI.
     * Updates to Nimbus JOSE +JWT 8.18.
 
-version 8.15 (2020-07-07)
+version 8.15 (2020-07-08)
+    * Adds new TrustChainResolver.resolveTrustChains method that starts with an
+      EntityStatement instead of an EntityID.
     * Adds new TrustChainRetriever.retrieve method that starts with an
       EntityStatement instead of an EntityID.
