--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1421,3 +1421,6 @@ version 8.15.1 (2020-07-08)
 version 8.16 (2020-07-10)
     * EntityStatementClaimsVerifier requires jwks for self-issued statements
       only.
+
+version 8.16.1 (2020-07-13)
+    * IDDocumentEvidence must allow null method and document fields (iss #305).
