--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1440,3 +1440,7 @@ version 8.18 (2020-07-17)
 
 version 8.19 (2020-07-21)
     * Adds DefaultEntityStatementRetriever.getRecordedRequests method.
+
+version 8.19.1 (2020-07-xx)
+    * Removes unused client_assertion and client_assertion_type parsing from
+      AuthenticationRequest.parse (iss #307).
