--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1465,3 +1465,7 @@ version 8.20 (2020-09-17)
 version 8.21 (2020-09-17)
     * The EntityMetadataValidator.validate interface method includes the
       EntityID.
+
+version 8.21 (2020-09-20)
+    * Adds new minimal ClientInformation and OIDCClientInformation
+      constructors.
