--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1469,3 +1469,5 @@ version 8.21 (2020-09-17)
 version 8.21 (2020-09-20)
     * Adds new minimal ClientInformation and OIDCClientInformation
       constructors.
+    * Adds new convenience EntityID.toIssuer, toSubject and parse(Subject),
+      parse(ClientID) methods.
