--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1466,6 +1466,8 @@ version 8.21 (2020-09-17)
     * The EntityMetadataValidator.validate interface method includes the
       EntityID.
 
-version 8.21 (2020-09-20)
+version 8.22 (2020-09-20)
     * Adds new minimal ClientInformation and OIDCClientInformation
       constructors.
+    * Adds new convenience EntityID.toIssuer, toSubject and parse(Subject),
+      parse(ClientID) methods.
