Adds prompt 'create' support (openid-connect-prompt-create-1_0)

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1491,3 +1491,7 @@ version 8.23 (2020-10-20)
 
 version 8.23.1 (2020-10-26)
     * Adds missing @Deprecated annotation to ClaimsRequest.
+
+version 8.24 (2020-11-08)
+    * Adds support in prompt "create", see Initiating User Registration via
+      OpenID Connect (draft 03).
