The URI scheme of browser rendered AS and OP metadata URIs must be https or http (iss #323)

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1507,8 +1507,11 @@ version 8.25 (2020-11-09)
     * Adds new static Issuer.parse method.
 
 version 8.26 (2020-11-13)
-    * Adds URIUtils.ensureSchemeIsHTTPS and ensureSchemeIsHTTPSorHTTP.
     * The URI scheme of browser rendered client metadata "client_uri",
       "policy_uri" and "tos_uri" must be "https" or "http" (iss #321).
     * The URI scheme of "initiate_login_uri" client metadata must be "https"
       (iss #322).
+    * The URI scheme of browser rendered AS and OP metadata "op_policy_uri",
+      "op_tos_uri" and "service_documentation" must be "https" or "http" (iss
+      #323).
+    * Adds URIUtils.ensureSchemeIsHTTPS and ensureSchemeIsHTTPSorHTTP.
