--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1521,3 +1521,7 @@ version 8.26 (2020-11-13)
       must be "https" or "http" (iss #324).
     * Adds URIUtils.ensureSchemeIsHTTPS and ensureSchemeIsHTTPSorHTTP.
     * Adds URIUtils.ensureSchemeIsNotProhibited.
+
+version 8.26 (2020-11-20)
+    * Updats AuthorizationServerMetadata and OIDCProviderMetadata to support
+      the "dpop_signing_alg_values_supported" metadata field.
