--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1522,6 +1522,7 @@ version 8.26 (2020-11-13)
     * Adds URIUtils.ensureSchemeIsHTTPS and ensureSchemeIsHTTPSorHTTP.
     * Adds URIUtils.ensureSchemeIsNotProhibited.
 
-version 8.27 (2020-11-20)
+version 8.27 (2020-11-21)
     * Updates AuthorizationServerMetadata and OIDCProviderMetadata to support
       the "dpop_signing_alg_values_supported" metadata field.
+    * Adds a DPoPJWTFactory with a default implementation.
