--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1526,3 +1526,4 @@ version 8.27 (2020-11-21)
     * Updates AuthorizationServerMetadata and OIDCProviderMetadata to support
       the "dpop_signing_alg_values_supported" metadata field.
     * Adds a DPoPJWTFactory with a default implementation.
+    * Adds HTTPRequest get and setDPoP methods for "DPoP" header support.
