--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1522,10 +1522,12 @@ version 8.26 (2020-11-13)
     * Adds URIUtils.ensureSchemeIsHTTPS and ensureSchemeIsHTTPSorHTTP.
     * Adds URIUtils.ensureSchemeIsNotProhibited.
 
-version 8.27 (2020-11-24)
+version 8.27 (2020-11-25)
     * Updates AuthorizationServerMetadata and OIDCProviderMetadata to support
       the "dpop_signing_alg_values_supported" metadata field.
     * Adds a DPoPJWTFactory with a default implementation.
     * Adds HTTPRequest get and setDPoP methods for "DPoP" header support.
     * ClientMetadata adds "software_statement" parameter support.
+    * Adds SoftwareStatementProcessor for verifying and merging software
+      statements in client metadata.
     * ClientMetadata copy constructor switches from fields access to getters.
