--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1543,3 +1543,5 @@ version 8.28.1 (2020-12-01)
 version 8.28.2 (2020-12-10)
     * MetadataPolicyEntry.parse throws IllegalArgumentException instead of NPE
       on null entry spec JSON object.
+    * MetadataPolicyEntry.parse must throw PolicyViolationException on
+      unsupported policy name.
