--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1548,4 +1548,4 @@ version 8.28.2 (2020-12-10)
 
 version 8.28.3 (2020-12-10)
     * Fixes TrustChain.resolveCombinedMetadataPolicy (iss #328).
-
+    * Updates to com.nimbusds:nimbus-jose-jwt:8.20.1
