--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1549,3 +1549,8 @@ version 8.28.2 (2020-12-10)
 version 8.28.3 (2020-12-10)
     * Fixes TrustChain.resolveCombinedMetadataPolicy (iss #328).
     * Updates to com.nimbusds:nimbus-jose-jwt:8.20.1
+
+version 8.28.4 (2020-12-15)
+    * Moves the optional OpenID Connect Federation 1.0 trust_anchor_id from RP
+      metadata to a top-level entity statement claim, to address changes in
+      draft 14.
