--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1554,3 +1554,6 @@ version 8.28.4 (2020-12-15)
     * Moves the optional OpenID Connect Federation 1.0 trust_anchor_id from RP
       metadata to a top-level entity statement claim, to address changes in
       draft 14.
+
+version 8.29 (2020-12-18)
+    * New OIDCClientMetadata shallow copy constructor.
