--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1558,3 +1558,8 @@ version 8.28.4 (2020-12-15)
 version 8.29 (2020-12-18)
     * New OIDCClientMetadata shallow copy constructor.
     * Replaces JDK 10 with JDK 11 build.
+
+version 8.29.1 (2020-12-29)
+    * Updates ClientMetadata.toJSONObject to throw IllegalStateException on
+      missing or more than one certificate field for the subject in
+      tls_client_auth.
