--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1568,6 +1568,7 @@ version 8.30 (2020-12-31)
     * Adds new static X509CertificateUtils.generate method with X500Principal
       args for issuer and subject.
 
-version 8.31 (2021-01-06)
+version 8.31 (2021-01-07)
     * Adds support for OpenID Connect Client Initiated Backchannel
       Authentication (CIBA) Flow - Core 1.0 (draft 03).
+    * Adds new HTTPRequest(Method,URI) constructor.
